# copilot-testing

./: .gitignore  README.md  copilot-pygame-test.py  pyproject.toml  train-ml-mnist.py
prompts/: gen-diff.py
src/diffgen/: eval.py  flooding-with-prompt.py  prompted-flood.py
src/diffgen/examples/: 1.js  2.js  2.py
