[tool.poetry]
name = "copilot-testing"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
pygame = "^2.1.2"
requests = "^2.27.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = "^22.1.0"
mypy = "^0.940"
keras = "^2.8.0"
tensorflow = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
